--- a/src/sass/global/base.scss
+++ b/src/sass/global/base.scss
@@ -1,9 +1,9 @@
 body {
-/*   @include font($segoe, 20px, 400);
+  @include font($proxima, 16px, 400);
 
-background-color: $white;
-color: $black;
-line-height: px; */
+  background-color: $white;
+  color: $black;
+  line-height: 18px;
 }
 
 h1,
