--- a/src/sass/global/type.scss
+++ b/src/sass/global/type.scss
@@ -1,2 +1,4 @@
-/* @include font-face("Segoe UI", "../fonts/SegoeUIRegular", 400, normal, eot ttf woff);
-@include font-face("Segoe UI", "../fonts/SegoeUIBold", 700, normal, eot ttf woff); */
+@include font-face("Proxima Nova", "../fonts/ProximaNovaLight", 300, normal, eot ttf woff woff2 svg);
+@include font-face("Proxima Nova", "../fonts/ProximaNova", 400, normal, eot ttf woff woff2 svg);
+@include font-face("Proxima Nova", "../fonts/ProximaNovaSemibold", 600, normal, eot ttf woff woff2 svg);
+@include font-face("Proxima Nova", "../fonts/ProximaNovaBold", 700, normal, eot ttf woff woff2 svg);
