--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -1,4 +1,4 @@
-/* $segoe: "Segoe UI", "Arial", sans-serif; */
+$proxima: "Proxima Nova", "Tahoma", sans-serif;
 
 $white: #ffffff;
 $black: #000000;
