файлы для блоков

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,5 +5,13 @@
 @import "global/buttons";
 @import "global/forms";
 @import "global/base";
-
 @import "blocks/header";
+@import "blocks/menu";
+@import "blocks/welcome";
+@import "blocks/features";
+@import "blocks/subscribe";
+@import "blocks/prices";
+@import "blocks/tweets";
+@import "blocks/screenshots";
+@import "blocks/apps";
+@import "blocks/contacts";
