--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -1,4 +1,7 @@
 $proxima: "Proxima Nova", "Tahoma", sans-serif;
 
 $white: #ffffff;
+$white-mostly: #fbfbfb;
 $black: #000000;
+$blue-dark: #6a6e8e;
+$blue-very-dark: #4c4f5f;
