--- a/src/sass/global/base.scss
+++ b/src/sass/global/base.scss
@@ -1,8 +1,8 @@
 body {
   @include font($proxima, 16px, 400);
 
-  background-color: $white;
-  color: $black;
+  background-color: $white-mostly;
+  color: $blue-dark;
   line-height: 18px;
 }
 
