--- a/src/sass/global/mixin.scss
+++ b/src/sass/global/mixin.scss
@@ -1,15 +1,3 @@
-@mixin clearfix() {
-  &::after,
-  &::before {
-    content: "";
-    display: table;
-  }
-
-  &::after {
-    clear: both;
-  }
-}
-
 @function str-replace($string, $search, $replace: "") {
   $index: str-index($string, $search);
 
@@ -44,4 +32,12 @@
   font-family: $font;
   font-size: $size;
   font-weight: $weight;
+}
+
+@mixin title() {
+  @include font($proxima, 25px, 600);
+
+  color: $blue-very-dark;
+  line-height: 18px;
+  text-align: center;
 }
