--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,5 +13,5 @@
 @import "blocks/prices";
 @import "blocks/tweets";
 @import "blocks/screenshots";
-@import "blocks/apps";
+@import "blocks/download";
 @import "blocks/contacts";
