--- a/src/sass/global/mixin.scss
+++ b/src/sass/global/mixin.scss
@@ -1,3 +1,8 @@
+@mixin container() {
+  margin: 0 auto;
+  width: 1005px;
+}
+
 @function str-replace($string, $search, $replace: "") {
   $index: str-index($string, $search);
 
