--- a/src/sass/blocks/welcome.scss
+++ b/src/sass/blocks/welcome.scss
@@ -1,4 +1,7 @@
 .welcome {
+  background-image: url("../img/bg-welcome.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
   min-height: 720px;
 
   &__wrapper {
