--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -2,6 +2,7 @@ $proxima: "Proxima Nova", "Tahoma", sans-serif;
 
 $white: #ffffff;
 $white-mostly: #fbfbfb;
+$gray-very-light: #fafafa;
 $black: #000000;
 $blue-dark: #6a6e8e;
 $blue-very-dark: #4c4f5f;
