--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   cursor: pointer;
   display: inline-block;
+  outline: none;
   text-align: center;
   text-decoration: none;
   vertical-align: top;
