--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -4,5 +4,6 @@ $white: #ffffff;
 $white-mostly: #fbfbfb;
 $gray-very-light: #fafafa;
 $black: #000000;
+$mostly-black: #2a2b2d;
 $blue-dark: #6a6e8e;
 $blue-very-dark: #4c4f5f;
