--- a/src/sass/blocks/welcome.scss
+++ b/src/sass/blocks/welcome.scss
@@ -3,6 +3,7 @@
   background-image: url("../img/bg-welcome.jpg");
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   color: $white;
   min-height: 721px;
 
