--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -3,8 +3,10 @@ $proxima: "Proxima Nova", "Tahoma", sans-serif;
 $white: #ffffff;
 $white-mostly: #fbfbfb;
 $gray-very-light: #fafafa;
+$grey-dark: #7d7d7d;
 $black: #000000;
 $mostly-black: #2a2b2d;
 $blue-dark: #6a6e8e;
 $blue-very-dark: #4c4f5f;
 $blue-dark-desaturated: #5e6382;
+$blue-dark-grayish: #888ba5;
