--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -65,4 +65,12 @@
     padding-left: 37px;
     padding-right: 40px;
   }
+
+  &--show {
+    background-color: transparent;
+    letter-spacing: 1.5px;
+    padding: 0 66px;
+    padding-bottom: 7px;
+    padding-top: 7px;
+  }
 }
