--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -10,3 +10,5 @@ $blue-dark: #6a6e8e;
 $blue-very-dark: #4c4f5f;
 $blue-dark-desaturated: #5e6382;
 $blue-dark-grayish: #888ba5;
+$blue-dark-grayish2: #92939b;
+$blue-dark-very-grayish: #626468;
