декоративное оформление скриншоты

--- a/src/sass/blocks/download.scss
+++ b/src/sass/blocks/download.scss
@@ -1,4 +1,8 @@
 .download {
+  background-image: url("../img/bg-download.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 365px;
 
   &__wrapper {
