--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -12,3 +12,4 @@ $blue-dark-desaturated: #5e6382;
 $blue-dark-grayish: #888ba5;
 $blue-dark-grayish2: #92939b;
 $blue-dark-very-grayish: #626468;
+$blue-light-grayish: #e2e5fe;
