--- a/src/sass/blocks/contacts.scss
+++ b/src/sass/blocks/contacts.scss
@@ -5,8 +5,12 @@
   &__title {
     @include container;
 
-    margin-bottom: 40px;
-    padding-top: 60px;
+    font-size: 35px;
+    font-weight: 600;
+    letter-spacing: 1.3px;
+    line-height: 18px;
+    margin-bottom: 58px;
+    padding-top: 72px;
   }
 
   &__social {
@@ -14,10 +18,20 @@
   }
 
   &__link {
-    margin-right: 60px;
+    display: inline-block;
+    margin-right: 57px;
+    vertical-align: middle;
 
     &:last-child {
       margin-right: 0;
     }
+  }
+
+  &__image {
+    fill: $blue-dark;
+  }
+
+  &__copyright {
+    letter-spacing: 1.5px;
   }
 }
