мелкие декоративные правки

--- a/src/sass/blocks/screenshots.scss
+++ b/src/sass/blocks/screenshots.scss
@@ -51,6 +51,7 @@
     width: 216px;
 
     &:nth-child(3) {
+      box-shadow: none;
       height: 444px;
       margin-left: 40px;
       margin-right: 114px;
