--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -26,14 +26,14 @@
   }
 
   &--more {
-    margin-right: 21px;
+    margin-right: 20px;
     padding-left: 32px;
     padding-right: 27px;
   }
 
   &--download {
     padding-left: 36px;
-    padding-right: 36px;
+    padding-right: 35px;
   }
 
   &--submit {
@@ -69,6 +69,7 @@
   &--show {
     background-color: transparent;
     letter-spacing: 1.5px;
+    margin-bottom: 50px;
     padding: 0 66px;
     padding-bottom: 7px;
     padding-top: 7px;
