декоративное оформление кнопки блока преимуществ

--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -70,6 +70,7 @@
     background-color: transparent;
     letter-spacing: 1.5px;
     margin-bottom: 50px;
+    margin-top: -9px;
     padding: 0 66px;
     padding-bottom: 7px;
     padding-top: 7px;
