--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -3,9 +3,10 @@ $proxima: "Proxima Nova", "Tahoma", sans-serif;
 $white: #ffffff;
 $white-mostly: #fbfbfb;
 $gray-very-light: #fafafa;
+$gray-very-light2: #f3f3f3;
 $grey-dark: #7d7d7d;
 $black: #000000;
-$mostly-black: #2a2b2d;
+$black-mostly: #2a2b2d;
 $blue-dark: #6a6e8e;
 $blue-very-dark: #4c4f5f;
 $blue-dark-desaturated: #5e6382;
@@ -13,3 +14,4 @@ $blue-dark-grayish: #888ba5;
 $blue-dark-grayish2: #92939b;
 $blue-dark-very-grayish: #626468;
 $blue-light-grayish: #e2e5fe;
+$orange-pure: #f95200;
