--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -78,7 +78,6 @@
 
   &__list {
     display: none;
-    /* margin-right: 43px; */
   }
 
   &--show &__list {
@@ -93,7 +92,12 @@
   &__link {
     @include font($proxima, 18px, 400);
 
-    color: $blue-dark;
+    color: $white;
+
+    &:hover {
+      color: $orange-pure;
+      transition: all 0.25s ease-in-out;
+    }
   }
 
   // TODO: анимация для бургера
