--- a/src/sass/blocks/welcome.scss
+++ b/src/sass/blocks/welcome.scss
@@ -1,5 +1,5 @@
 .welcome {
-  background-color: $mostly-black;
+  background-color: $black-mostly;
   background-image: url("../img/bg-welcome.jpg");
   background-position: center;
   background-repeat: no-repeat;
