--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -18,11 +18,9 @@
   vertical-align: top;
 
   &:hover {
-
-  }
-
-  &:active {
-
+    background-color: $orange-pure;
+    border-color: $orange-pure;
+    transition: all 0.25s ease-in-out;
   }
 
   &--more {
@@ -46,6 +44,11 @@
     position: absolute;
     top: 21px;
     width: 27px;
+
+    &:hover {
+      background-color: transparent;
+      border-color: none;
+    }
   }
 
   &--buy,
@@ -59,6 +62,10 @@
     padding-left: 52px;
     padding-right: 55px;
     padding-top: 7px;
+
+    &:hover {
+      color: $white;
+    }
   }
 
   &--popular {
@@ -84,6 +91,10 @@
     line-height: 18px;
     padding: 16px 24px;
     text-transform: uppercase;
+
+    &:hover {
+      color: $white;
+    }
   }
 
   &--prev {
