проверка по критериям

--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,7 +1,7 @@
 header {
   padding-top: 47px;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  right: 50%;
+  transform: translateX(50%);
   width: 1005px;
 }
