проверка по критериям, отступы снизу в блоках

--- a/src/sass/blocks/contacts.scss
+++ b/src/sass/blocks/contacts.scss
@@ -1,6 +1,7 @@
 .contacts {
-  min-height: 330px;
+  min-height: 280px;
   text-align: center;
+  padding-bottom: 50px;
 
   &__title {
     @include container;
