--- a/src/sass/blocks/tweets.scss
+++ b/src/sass/blocks/tweets.scss
@@ -4,7 +4,8 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 570px;
+  min-height: 520px;
+  padding-bottom: 50px;
 
   &__wrapper {
     @include container;
