--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -20,6 +20,7 @@
     padding: 0;
     position: relative;
     text-align: left;
+    transition: all 0.25s ease-in-out;
     width: 92px;
     z-index: 10;
   }
@@ -76,6 +77,7 @@
 
   &__list {
     display: none;
+    transition: all 0.25s ease-in-out;
   }
 
   &--show &__list {
