--- a/src/sass/global/variable.scss
+++ b/src/sass/global/variable.scss
@@ -1,5 +1,9 @@
 $proxima: "Proxima Nova", "Tahoma", sans-serif;
 
+$break-small: "(max-width: 767px)";
+$break-medium: "(min-width: 768px)";
+$break-large: "(min-width: 1200px)";
+
 $white: #ffffff;
 $white-mostly: #fbfbfb;
 $gray-very-light: #fafafa;
