--- a/src/sass/global/mixin.scss
+++ b/src/sass/global/mixin.scss
@@ -3,6 +3,16 @@
   width: 1005px;
 }
 
+@mixin container-fluid() {
+  width: auto;
+
+  @media #{$break-large} {
+    margin: 0 auto;
+    max-width: 1005px;
+    width: 83.5%;
+  }
+}
+
 @function str-replace($string, $search, $replace: "") {
   $index: str-index($string, $search);
 
