--- a/src/sass/blocks/welcome.scss
+++ b/src/sass/blocks/welcome.scss
@@ -9,8 +9,9 @@
   padding-bottom: 50px;
 
   &__wrapper {
-    @include container;
+    @include container-fluid;
 
+    padding: 0 20px;
     padding-top: 228px;
   }
 
