--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -3,6 +3,7 @@
   color: $white;
   display: flex;
   flex-direction: column;
+  min-width: 280px;
   position: relative;
   text-align: right;
   z-index: 10;
