--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -40,7 +40,7 @@
     border: none;
     font-size: 0;
     height: 25px;
-    left: 759px;
+    right: 25px;
     padding: 0;
     position: absolute;
     top: 21px;
