--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -65,8 +65,8 @@
     letter-spacing: -0.1px;
     margin-bottom: 28px;
     padding-bottom: 9px;
-    padding-left: 52px;
-    padding-right: 55px;
+    padding-left: 17.785%;
+    padding-right: 18.81%;
     padding-top: 7px;
 
     &:hover {
@@ -75,8 +75,8 @@
   }
 
   &--popular {
-    padding-left: 37px;
-    padding-right: 40px;
+    padding-left: 12.655%;
+    padding-right: 13.68%;
   }
 
   &--show {
