--- a/src/sass/blocks/tweets.scss
+++ b/src/sass/blocks/tweets.scss
@@ -8,7 +8,7 @@
   padding-bottom: 50px;
 
   &__wrapper {
-    @include container;
+    @include container-fluid;
 
     padding-top: 69px;
     text-align: center;
@@ -43,6 +43,7 @@
     line-height: 26px;
     margin-bottom: 46px;
     transition: all 0.25s ease-in-out;
+    word-wrap: break-word;
 
     &:nth-child(n+4) {
       display: none;
