--- a/src/sass/global/buttons.scss
+++ b/src/sass/global/buttons.scss
@@ -112,7 +112,7 @@
     font-weight: 400;
     letter-spacing: 0;
     line-height: 18px;
-    margin-right: 55px;
+    margin-bottom: 20px;
     padding-bottom: 14px;
     padding-left: 48px;
     padding-top: 16px;
