адаптивность/отзывчивость контакты

--- a/src/sass/blocks/contacts.scss
+++ b/src/sass/blocks/contacts.scss
@@ -1,11 +1,12 @@
 .contacts {
+  @include container-fluid;
+
   min-height: 280px;
+  min-width: 320px;
   text-align: center;
   padding-bottom: 50px;
 
   &__title {
-    @include container;
-
     font-size: 35px;
     font-weight: 600;
     letter-spacing: 1.3px;
