адаптивность/отзывчивость правка цен

--- a/src/sass/blocks/prices.scss
+++ b/src/sass/blocks/prices.scss
@@ -95,6 +95,14 @@
   }
 }
 
+@media #{$break-medium} {
+  .prices {
+    &__item {
+      width: 45%;
+    }
+  }
+}
+
 @media #{$break-large} {
   .prices {
     &__list {
